[New] code cleanup and new hashing methods
- Cleaned up all i18n compiler warnings in all classes
- Added new public hashing methods to pass the hashAlgorithm
- Important additional change: HASH table is now lower case.